--- a/src/views/kids_space/game_menu/styles.css
+++ b/src/views/kids_space/game_menu/styles.css
@@ -1,7 +1,7 @@
 .game_menu {
 	width: 100%;
 	height: 100%;
-	background-color: #a594ab;
+	background-color: var(--dialog_main_color);
 	font-size: var(--very-large-font);
 	overflow: auto;
 }
@@ -17,5 +17,5 @@
 }
 
 .minigame .go_back_button svg {
-	fill: #12121280;
+	fill: var(--dark-color-transparency);
 }
