--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -1,5 +1,59 @@
 :root {
+	/* Definições gerais */
 	--light-color: #F5F5F5;
-	--snake-game-score-background-color: #694e73;
+	--dark-color-transparency: #12121280;
 	--dialog_main_color: #A594AB;
+
+	/* ========================== */
+	/* =         Games          = */
+	/* ========================== */
+	/* Dinno Runner */
+	--dino-runner-game-background-color: #FFE1ED;
+	--dino-runner-game-details-color: #E274A0;
+	--dino-runner-game-board-background: #1E344B;
+
+	/* Musical Dino */
+	--musical-dino-game-background-color: #281C3D;
+	--musical-dino-game-button-background-color: #ADD8E6;
+
+	/* Snake */
+	--snake-game-score-background-color: #694E73;
+
+	/* ========================== */
+	/* =         Dinos          = */
+	/* ========================== */
+	/* Dino verde */
+	--dino-green-dark-color: #498A68;
+	--dino-green-main-color: #5CB38E;
+	--dino-green-light-color: #9BDFC1;
+
+	/* Dino amarelo */
+	--dino-yellow-dark-color: #BFB08B;
+	--dino-yellow-main-color: #FFEBBA;
+	--dino-yellow-light-color: #FFF5DC;
+
+	/* Dino vermelho */
+	--dino-red-dark-color: #8F3C3C;
+	--dino-red-main-color: #BE5050;
+	--dino-red-light-color: #DFA8A8;
+
+	/* Dino blue */
+	--dino-blue-dark-color: #679BB4;
+	--dino-blue-main-color: #89CFF0;
+	--dino-blue-light-color: #C4E7F7;
+
+	/* Dino rosa */
+	--dino-pink-dark-color: #BF8399;
+	--dino-pink-main-color: #FFAFCC;
+	--dino-pink-light-color: #FFD7E6;
+
+	/* Dino aqua */
+	--dino-aqua-dark-color: #7CA2A2;
+	--dino-aqua-main-color: #A5D8D8;
+	--dino-aqua-light-color: #D2ECEC;
+
+	/* Dino roxo */
+	--dino-roxo-dark-color: #9E83AC;
+	--dino-roxo-main-color: #D2AFE5;
+	--dino-roxo-light-color: #E9D7F2;
 }
