Feat(Dialog): Ajuste no dialogo para celular

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+	overscroll-behavior-y: contain;
+}
+
 body .MuiTypography-root,
 body .MuiChip-label,
 body .MuiBottomNavigationAction-label,
