--- a/src/views/kids_space/game_menu/styles.css
+++ b/src/views/kids_space/game_menu/styles.css
@@ -1,7 +1,7 @@
 .game_menu {
 	width: 100%;
 	height: 100%;
-	background-color: var(--dialog_main_color);
+	background-color: #B0B5C4;
 	font-size: var(--very-large-font);
 	overflow: auto;
 }
@@ -13,7 +13,7 @@
 .game_menu__go_back svg {
 	width: 3rem;
 	height: 3rem;
-	margin: 1rem 0rem 0rem 1rem;
+	margin: 1rem;
 }
 
 .minigame .go_back_button svg {
