--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -1,14 +1,15 @@
 :root {
+    --light-color: #F5F5F5;
+
 	--snake-game-score-background-color: #694e73;
 
 	/* Warning Dialog */
 	--dialog-background-color: #A594AB;
 	--dialog-circle-background-color: #E6E2E8;
 	--dialog-circle-border-color: #694E73;
+    --dialog-input-background-color: #C0B3C5;
     --dark-color: #121212;
 
-    --snake-game-score-background-color: #694E73;
-    
     --tic-tac-dino-background-color: #CEC1E7;
     --tic-tac-dino-square-background-color: #D8CDEC;
     --tic-tac-dino-display-background-color: #c1e7e1b3;
