Feat(LGPD): Remove Google Contacts Grant

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body .MuiInputBase-root,
 .dino_dialog__header,
 .dino_dialog__content {
 	font-family: var(--font-base);
+	text-align: justify;
 	color: var(--base-font-color);
 }
 
