--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -66,7 +66,7 @@
 .settings__form__delete_account {
 	font-size: var(--large-font);
 	margin-top: 0.5rem;
-	color: #ED2939;
+	color: #ed2939;
 	text-transform: uppercase;
 }
 
