--- a/src/components/game_over_dialog/styles.css
+++ b/src/components/game_over_dialog/styles.css
@@ -8,7 +8,7 @@
 	padding: 2rem 2rem 0 2rem;
 	border-radius: 1rem;
 	z-index: 10;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .game_over_dialog__content {
