--- a/src/views/kids_space/game_menu/styles.css
+++ b/src/views/kids_space/game_menu/styles.css
@@ -1,7 +1,7 @@
 .game_menu {
 	width: 100%;
 	height: 100%;
-	background-color: #B0B5C4;
+	background-color: #b0b5c4;
 	font-size: var(--very-large-font);
 	overflow: auto;
 }
