--- a/src/Var.css
+++ b/src/Var.css
@@ -20,6 +20,7 @@
 	--login-background: #694e73;
 	--background-main: #f5f5f5;
 	--horizontal-menu-item: #688478;
+	--dialog-input: #e2e2e2;
 
 	/* Fontes */
 	--base-font-color: #121212;
@@ -62,6 +63,7 @@
 	--login-background: #2f2e2c;
 	--background-main: #2f2e2c;
 	--horizontal-menu-item: #c2ae64;
+	--dialog-input: #5A5A5A;
 
 	/* Fontes */
 	--base-font-color: #f5f5f5;
