--- a/src/components/settings/first_settings_dialog/styles.css
+++ b/src/components/settings/first_settings_dialog/styles.css
@@ -45,3 +45,17 @@
 .first_settings__dialog .message_dialog .dino_hr {
 	margin: 0.75rem 0.5rem;
 }
+
+.first_settings__dialog .message_dialog.set_password p {
+	font-size: var(--default-font);
+}
+
+.first_settings__dialog .message_dialog.set_password input {
+	margin-bottom: 0.7rem;
+	width: 100%;
+	padding: 0.2rem;
+	border-radius: 1rem;
+	background-color: var(--dialog-input);
+	color: var(--base-font-color);
+	border: none;
+}
