just changing some .css don't mind me

--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ body .MuiInput-underline:before {
 	color: var(--contrast-color);
 }
 
-.element_flex__right {
+.element__flex_row {
 	display: flex;
 	flex-direction: row;
 }
