--- a/src/views/login/styles.css
+++ b/src/views/login/styles.css
@@ -36,8 +36,6 @@
 
 .login__content__info {
 	margin-top: auto;
-	display: flex;
-	flex-direction: column;
 	align-items: center;
 	margin-bottom: 0.5rem;
 }
@@ -49,7 +47,7 @@
 }
 
 .login__content__info .link_button {
-	padding: 0;
+	padding: 8px;
 	margin-bottom: 0.5rem;
 	text-align: center;
 	font-size: var(--small-font);
