Feat ( css changes )

--- a/src/views/kids_space/game_menu/memory_game/styles.css
+++ b/src/views/kids_space/game_menu/memory_game/styles.css
@@ -1,5 +1,5 @@
 .memory_game {
-    background-color: #9ACAE7;
+    background-color: #FDCF76;
     text-align: center;
     height: 100vh;
     display: flex;
