--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -113,3 +113,7 @@
 .settings__change_password_dialog .dino_dialog__header__title h1 {
 	font-size: var(--very-large-font);
 }
+
+.settings__change_password_dialog__error_message {
+	color: #FF7676;
+}
