--- a/src/components/kids_space_dialog/access_dialog/styles.css
+++ b/src/components/kids_space_dialog/access_dialog/styles.css
@@ -3,7 +3,7 @@
 }
 
 .access_dialog .kids_space_dialog__content {
-	height: 55vh;
+	height: 65vh;
     text-align: justify;
     padding-left: 1.3rem;
 }
@@ -39,4 +39,8 @@
     color: var(--dialog-background-color);
     font-size: var(--small-font);
     margin-left: 1rem;
+}
+
+.access_dialog__form__error_message {
+    color: #C33121;
 }
