Feat(Staff Data + Treatment and Faq View)

--- a/src/views/main/faq/styles.css
+++ b/src/views/main/faq/styles.css
@@ -1,7 +1,7 @@
 .faq__content {
 	position: absolute;
 	width: 100%;
-	height: calc(100% - 3.75rem);
+	height: 100%; 
 	overflow-y: auto;
 	font-size: var(--default-font);
 }
