--- a/src/views/main/contacts/contact_dialog_card/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_card/header/styles.css
@@ -1,6 +1,7 @@
-.contact_dialog_content_header .MuiTypography-root {
+.contact_dialog_content_header .MuiTypography-root.MuiCardHeader-title {
 	font-size: var(--default-font);
 }
+
 .contact_dialog_content_header
 	.MuiTypography-root.MuiTypography-root.MuiCardHeader-subheader {
 	font-size: var(--small-font);
