--- a/src/views/terms_of_use/styles.css
+++ b/src/views/terms_of_use/styles.css
@@ -51,7 +51,7 @@
 }
 
 .terms_of_use span {
-	font-size: 10.125rem;
+	font-size: var(--default-small-font);
 	text-align: center;
 	color: #636363;
 }
