--- a/src/components/kids_space_dialog/game_over_dialog/styles.css
+++ b/src/components/kids_space_dialog/game_over_dialog/styles.css
@@ -1,19 +1,25 @@
 .game_over_dialog {
 	background-color: var(--dialog-background-color);
 	width: 80vw;
-	height: 30vh;
+	left: 10vw;
+	height: auto;
+	top: 35vh;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 
 .game_over_dialog__content {
+	padding-top: 1.5rem;
 	text-align: center;
 }
 
 .game_over_dialog__buttons {
 	display: flex;
-	flex-direction: row;
 	justify-content: flex-end;
-	margin-top: 10vmin;
+	width: 100%;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .game_over_dialog__buttons .button {
