--- a/src/components/kids_space_dialog/styles.css
+++ b/src/components/kids_space_dialog/styles.css
@@ -2,20 +2,18 @@
 	position: fixed;
     display: flex;
     flex-direction: column;
-	width: 70vw;
-    top: 27vh;
-	padding: 2rem 2rem 0 2rem;
+	width: 75vw;
+    top: 20vh;
 	border-radius: 1rem;
 	z-index: 10;
 	animation-name: kids_space_dialog_animation;
-  	animation-duration: 0.4s
+  	animation-duration: 0.4s;
 }
 
 .kids_space_dialog.warning_dialog,
 .kids_space_dialog.access_dialog {
     align-items: center;
-    min-height: 46vh;
-    max-height: 61vh;
+    height: 70vh;
 }
 
 .kids_space_dialog__circle {
@@ -35,16 +33,15 @@
 }
 
 .kids_space_dialog__content {
-    width: 70vw;
+    width: 100%;
 	height: 40vh;
-    margin-top: -7rem;
-    padding-top: 8rem;
+    margin-top: -35vmin;
+    padding-top: 37vmin;
     border-radius: 1rem;
 	text-align: center;
     background-color: var(--dialog-background-color);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     z-index: 10;
-
 }
 
 @keyframes kids_space_dialog_animation {
