--- a/src/components/settings/first_settings_dialog/styles.css
+++ b/src/components/settings/first_settings_dialog/styles.css
@@ -56,6 +56,7 @@
 	padding: 0.2rem;
 	border-radius: 1rem;
 	background-color: var(--dialog-input);
+	font: var(--default-font);
 	color: var(--base-font-color);
 	border: none;
 }
