--- a/src/App.css
+++ b/src/App.css
@@ -106,8 +106,10 @@ body .MuiInput-underline:before {
 	margin: 0rem 0.125rem;
 }
 
-.history_link {
-	color: var(--selection);
+.dino__history_link {
+	color: var(--button-font-color);
+	font-size: var(--default-font);
+	text-decoration: underline;
 }
 
 .dino__textfield .MuiFormHelperText-root {
