--- a/src/views/staff/treatment/styles.css
+++ b/src/views/staff/treatment/styles.css
@@ -8,6 +8,19 @@
   padding: 16px;
 }
 
-.treatment_action__buttons {
-  background-color: transparent;
+.treatment__list_item {
+  font-size: var(--default-font);
+}
+
+.treatment__list_item  .treatment__list_item__text {
+  font-size: var(--big-font);
+  margin-right: 32px;
+}
+
+.treatment__list_item .icon_button__options {
+  margin-left: 8px;
+}
+
+.treatment__list_item .MuiTypography-root.MuiListItemText-secondary.MuiTypography-body2.MuiTypography-colorTextSecondary.MuiTypography-displayBlock .dino__history_link {
+  text-align: initial;
 }
