--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,7 @@ body .MuiChip-label,
 body .MuiBottomNavigationAction-label,
 body .MuiButton-label,
 body .MuiFormLabel-root,
-body .MuiInputBase-root,
-.dino_dialog__header,
-.dino_dialog__content {
+body .MuiInputBase-root {
 	font-family: var(--font-base);
 	text-align: justify;
 	color: var(--base-font-color);
