Fix(Note): Correções no CSS e melhoria na pesquisa de anotações

--- a/src/views/main/notes/content/column/card/styles.css
+++ b/src/views/main/notes/content/column/card/styles.css
@@ -26,7 +26,6 @@
 
 .note__note_content__column__column_card .MuiCardHeader-root {
 	padding: 1rem;
-	padding-bottom: 10.125rem;
 }
 
 .note__note_content__column__column_card
@@ -50,6 +49,7 @@
 .note__note_content__column__column_card__card__card_answer.MuiCardActions-root {
 	padding: 0.5rem 1rem 0.5rem 1rem;
 	background-color: var(--note-answer-background);
+	color: var(--dark-color);
 }
 
 .note__note_content__column__column_card__card__card_answer.MuiCardActions-root
