Fix(Menu): Tamanhos de fonte padronizados

--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -105,7 +105,7 @@
 
 .drawer_navigation__drawer__visible
 	.MuiTypography-root.MuiListItemText-primary {
-	text-align: justify;
+	text-align: left;
 }
 
 .user__avatar {
