--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -1,29 +1,24 @@
 .home .home__grid {
-	width: 100%;
+	width: 90%;
 	display: grid;
-	grid-template-columns: 1fr 1fr;
-	padding: 1.5rem 1.5rem 0rem;
-	grid-gap: 0rem 1.5rem;
+	grid-template-columns: 48% 48%;
+	grid-gap: 0 4%;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 5%;
 }
 
 .home .home__grid__button {
-	width: 100%;
 	padding: 0rem;
 	border-radius: 0.5rem;
 }
 
 .home__grid__item {
+	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	width: 100%;
-	height: 100%;
-}
-
-.home .home__grid__button {
-	width: 90%;
-	height: 90%;
 }
 
 .home .home__grid__button .MuiPaper-rounded {
@@ -31,17 +26,23 @@
 }
 
 .home__grid__item__name {
+	width: 100%;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 	height: 2.5rem;
-	font-size: larger;
+	font-size: var(--big-font);
 	font-weight: 700;
 	color: var(--contrast-color);
 	margin-top: 4px;
 	text-align: center;
 }
 
+p.home__grid__item__name {
+	margin: 0.5rem;
+}
+
 .home .home__grid__button {
-	width: 100%;
-	height: 100%;
 	background-color: var(--home-icons);
 	display: flex;
 	align-items: center;
@@ -49,7 +50,8 @@
 }
 
 .home .home__grid__button svg {
-	width: 90%;
+	width: 100%;
+	height: auto;
 	padding: 0.5rem;
 	height: auto;
 	fill: var(--dark-color);
