--- a/src/components/list_title/styles.css
+++ b/src/components/list_title/styles.css
@@ -5,5 +5,9 @@
 
 .list__title p {
 	font-size: var(--large-font);
-	text-align: initial;
+	text-align: left;
+}
+
+.list__title .MuiTypography-root.MuiTypography-body1 {
+	text-align: left;
 }
