--- a/src/views/kids_space/game_menu/memory_game/components/piece/styles.css
+++ b/src/views/kids_space/game_menu/memory_game/components/piece/styles.css
@@ -56,7 +56,7 @@
 
 @keyframes piece_flip_back_animation{
     0% {transform: rotate3d(0, 1, 0, 180deg);}
-    100% {transform: rotate3d(0);}
+    100% {transform: rotate3d(0, 0, 0, 0);}
 }
   
 @keyframes piece_flip_front_animation {
