--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -161,6 +161,11 @@
 	transform-origin: top;
 }
 
+
+.teste {
+	position: absolute;
+}
+
 @keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_one {
 	from {
 		transform: translate3d(-300%, 0, 0);
