Feat ( happiness pontuation )

--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -161,6 +161,12 @@
 	transform-origin: top;
 }
 
+.dinogotchi_screen__status_bar {
+	position: absolute;
+    left: auto;
+    right: 0;
+	color: black;
+}
 
 .teste {
 	position: absolute;
