--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -221,6 +221,10 @@
 	padding: 1rem;
 }
 
+.dinogotchi_loader {
+	position: initial;
+}
+
 @keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_one {
 	from {
 		transform: translate3d(-300%, 0, 0);
