Feat(Design Fixes): nos dialogos de kids, cores, icones de contatos
tudo no trello

--- a/src/MaterialUI.css
+++ b/src/MaterialUI.css
@@ -19,9 +19,15 @@ body .MuiDialogActions-spacing > :not(:first-child) {
 	margin-left: 0;
 }
 
+body .colorDefault .MuiSvgIcon-root {
+	/* fill: var(--contrast-color); */
+	fill: #fafafa;
+}
+
 body .MuiIconButton-root,
 body .MuiSelect-icon,
 body .MuiSvgIcon-root {
+	/* fill: var(--contrast-color); */
 	fill: var(--contrast-color);
 }
 
