--- a/src/Var.css
+++ b/src/Var.css
@@ -62,7 +62,7 @@
 	/* Fundos */
 	--login-background: #2f2e2c;
 	--background-main: #2f2e2c;
-	--horizontal-menu-item: #c2ae64;
+	--horizontal-menu-item: #694e73;
 	--dialog-input: #5A5A5A;
 
 	/* Fontes */
@@ -73,7 +73,7 @@
 	--header-and-menu: #121212;
 
 	/* Home */
-	--home-icons: #ffeaa3;
+	--home-icons: #694e73;
 
 	/* Notas */
 	--board-background: #796980;
