--- a/src/components/kids_space_dialog/game_over_dialog/styles.css
+++ b/src/components/kids_space_dialog/game_over_dialog/styles.css
@@ -13,7 +13,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-end;
-	margin-top: 10vmin;
+	/* margin-top: 10vmin; */
 }
 
 .game_over_dialog__buttons .button {
