Feat(treatment questions filter + translations)

--- a/src/General.css
+++ b/src/General.css
@@ -8,7 +8,6 @@
 .dino__history_link {
 	color: var(--button-font-color);
 	font-size: var(--default-font);
-	text-decoration: underline;
 }
 
 .dino__textfield .MuiFormHelperText-root {
@@ -34,4 +33,9 @@
 /* para dar um espaço para scrollar o ultimo item da lista sem o botao de add atrapalhar */
 .app .dino__list__padding {
 	padding-bottom: 4.5em;
+}
+
+.app .dino__list_and_filter {
+	flex: auto;
+	align-items: flex-end;
 }
